update-manager (1:0.93.14) intrepid; urgency=low

  * po/*.po:
    - updated to the latest launchpad export

 --

update-manager (1:0.93.13) intrepid; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - better KeyDependencies for ubuntu-desktop to make the 
      detection more robust

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Sep 2008 21:56:11 +0200

update-manager (1:0.93.12) intrepid; urgency=low

  * DistUpgrade: load DistUpgradeViewKDE not KDE4
  * DistUpgradeViewKDE: Fix various translations
  * DistUpgradeViewKDE: Add window icon

 -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 12 Sep 2008 13:17:52 +0100

update-manager (1:0.93.11) intrepid; urgency=low

  [ Jonathan Riddell ]
  * DistUpgradeViewKDE: don't use setHeaderHidden, doesn't exist in Qt 4.3
  * DistUpgradeViewKDE: Disable terminal button until terminal exists
	
  [ Michael Vogt ]
  * rename DistUpgradeViewKDE4.py to DistUpgradeViewKDE.py
    because adept runs this frontend explicitely (instead
    of letting dist-upgrade.py decide)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Sep 2008 12:42:10 +0200

update-manager (1:0.93.10) intrepid; urgency=low

  [ Jonathan Riddell ]
  * Add missing debian/update-manager-kde.install
  
  [ Michael Vogt ]
  * transition landscape.canonical.com to the main repository
    (LP: #268551)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 10 Sep 2008 15:55:47 +0200

update-manager (1:0.93.9) intrepid; urgency=low

  * do not build depend on nvidia-common for lpia

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Sep 2008 13:56:20 +0200

update-manager (1:0.93.8) intrepid; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeCache.py:
    - transition "kubuntu-desktop-kde4" to "kubuntu-desktop"
      (thanks to Jonathan Riddell)
  * DistUpgrade/DistUpgradeCache.py,
    DistUpgrade/DistUpgradeController.py:
    - fixes in the "AllowUnauthenticated" code (thanks to Adam
      Conrad)
  * debian/update-manager-hildon.install: