@@ -2,6 +2,9 @@ update-manager (1:0.93.14) intrepid; urgency=low
 
   * po/*.po:
     - updated to the latest launchpad export
+  * DistUpgrade/DistUpgradeGettext.py:
+    - add more robust version of gettext() that does not
+      crash if incorrect number arguments is passed (LP: #269379)
 
  --
 
